# news-summarizer

./: .gitignore  README.md
backend/: main.py  pyproject.toml  pyrightconfig.json
backend/core/: config.py
backend/db/: connect_db.py
backend/models/: article.py  user.py  users.py
backend/routers/: articles.py  users.py
backend/routes/: articles.py  users.py
backend/schemas/: articles.py  users.py
backend/services/: article_service.py
backend/utils/: auth.py  summarizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: ArticleForm.jsx  Header.jsx  Login.jsx  Register.jsx  Spinner.jsx  index.js
frontend/src/layout/: AuthLayout.jsx  MainLayout.jsx  index.js
frontend/src/pages/: Articles.jsx  DetailPage.jsx  LoginPage.jsx  MyArticlesPage.jsx  RegisterPage.jsx  SummarizePage.jsx  index.js
frontend/src/store/: authSlice.js  store.js
